# pyg-engine

./: .gitignore  .ruff.toml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  GITHUB_PAGES_SETUP.md  Gemfile  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  RELEASE_NOTES_v1.0.0a2.md  SPRITE_SYSTEM_COMPLETE.md  StructureBreakdown.md  TESTING.md  TIME_SCALE_IMPLEMENTATION.md  TODO.md  UI_SYSTEM_COMPLETE.md  UI_SYSTEM_PLAN.md  examples.md  index.md  install_deps.py  pyproject.toml  pyrightconfig_old.json  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  setup.py  test_installation.py
.github/workflows/: README.md  build_wheels.yml  codeql.yml  pdoc-gh-pages.yml  publish-to-pypi.yml  tests.yml
.plans/: structure.md
_includes/: head-custom.html
_layouts/: default.html  docs.html
benchmark_logs/fixed_scene_v1/: pyg_engine_20260312T151316Z.csv  pyg_engine_20260312T151405Z.csv  pyg_engine_20260312T151455Z.csv  pyg_engine_20260312T151604Z.csv  pyg_engine_20260312T151654Z.csv  pygame_20260312T151316Z.csv  pygame_20260312T151405Z.csv  pygame_20260312T151455Z.csv  pygame_20260312T151604Z.csv  pygame_20260312T151654Z.csv
docs/: CORE_SYSTEMS_GUIDE.md  README.md  VERSIONING.md
examples/: README.md  SPRITE_EXAMPLES_README.md  button_features_demo.py  camera_worldspace_demo.py  collision_demo_interactive.py  collision_detection_example.py  compare_benchmarks.py  direct_draw_demo.py  draw_primitives_demo.rs  fixed_benchmark_common.py  fixed_benchmark_side_by_side.py  font_family_demo.py  game_object_transform_demo.py  input_demo.rs  input_test.py  logger_test.py  logging_demo.py  main.py  mesh_demo.py  mesh_demo.rs  pyg_engine_fixed_benchmark.py  pygame_fixed_benchmark.py  pygame_rendering_showcase_demo.py  python_bulk_draw_demo.py  python_camera_worldspace_demo.py  python_direct_draw_demo.py  python_function_update_demo.py  python_game_object_transform_demo.py  python_input_demo.py  python_manual_loop.py  python_mesh_demo.py  python_rendering_showcase_demo.py  python_snake_demo.py  python_threading_demo.py  python_visualization_demo.py  rendering_showcase_side_by_side.py  snake_demo.py  snake_game.py  test.py  threading_demo.py  (+5 more)
examples/cpp/glfw_tests/basic/: CMakeLists.txt
examples/cpp/glfw_tests/basic/src/: main.cpp
examples/cpp/sfml_tests/basic/: README.md
examples/cpp/sfml_tests/basic/src/: main.cpp
examples/flappy_bird/: FLAPPY_BIRD_README.md  LEADERBOARD_FEATURE.md  MIGRATION.md  README.md  SPRITE_UPGRADE.md
examples/glfw_tests/basic/: CMakeLists.txt
examples/glfw_tests/basic/src/: main.cpp
examples/scripts/: player.py
examples/snake/: main.py  snake.py
include/glad/: gl.h
pyg/: __init__.py
pyg/core/: __init__.py  engine.py
pyg/input/: __init__.py  input_manager.py
pyg/types/: __init__.py  color.py
pyg/utils/: math.py
python/pyg_engine/: __init__.py  engine.py  shapes.py  ui.py
rust/src/: bindings.rs  color.rs  component.rs  engine.rs  game_object.rs  lib.rs  time.rs  vector.rs
rust/src/bindings/: color_bind.rs  engine.rs  engine_bind.rs  input_bind.rs  mod.rs  physics_bind.rs  vector_bind.rs
rust/src/core/: camera.rs  command.rs  component.rs  draw_manager.rs  engine.rs  entity.rs  game_object.rs  geometry.rs  input_manager.rs  logging.rs  mod.rs  object_manager.rs  render_manager.rs  shader.wgsl  text.rs  texture.rs  time.rs  ui_manager.rs  window_manager.rs
rust/src/core/physics/: aabb_tree.rs  collider.rs  collision_world.rs  events.rs  layers.rs  mod.rs  sat.rs  shapes.rs
rust/src/core/ui/: button.rs  event.rs  label.rs  layout.rs  mod.rs  panel.rs  style.rs
rust/src/types/: color.rs  mod.rs  vector.rs
src/: __init__.py  collision_detector.py  engine.py  physics_system.py
src/audio/: AudioManager.cpp  AudioManager.h  Music.cpp  Music.h  Sound.cpp  Sound.h
src/bindings/: audio_bindings.cpp  module.cpp
src/components/: Script.cpp  Script.h  Transform.cpp  Transform.h  script.py
src/core/: Component.cpp  Component.h  Core.cpp  Core.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Math.cpp  Math.h  Time.cpp  Time.h  Window.cpp  Window.h  engine.py  gameobject.py
src/datatypes/: Color.h  Vector.h
src/events/: EventNotifier.cpp  EventNotifier.h
src/input/: InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/logging/: Logger.cpp  Logger.h
src/physics/: rigidbody.py
src/pyg_engine/: engine.py
src/rendering/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Window.cpp  Window.h  animator.py  camera.py  sprite.py
src/resources/: ResourceManager.cpp  ResourceManager.h  TextureCache.cpp  TextureCache.h
src/ui/: __init__.py  ui_canvas.py  ui_element.py
src/utilities/: __init__.py  vector2.py
test_docs/: index.html  pyg_engine.html  search.js
tests/: __init__.py  conftest.py  test_bindings.py  test_color.py  test_engine_rust.py  test_math.py  test_native_bindings.py
tests/cpp/: test_color.cpp  test_math.cpp  test_vector.cpp
tools/: __init__.py  dev_tool.py
tools/widgets/: __init__.py  component_inspector.py  engine_stats.py  gameobject_list.py  serialization_panel.py  ui_elements.py
