[package]
name = "pyg_engine_native"
version = "1.2.0"
edition = "2021"

[lib]
name = "pyg_engine_native"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json", "chrono"] }
tracing-appender = "0.2"
once_cell = "1.21"
#env_logger = "0.11"
pollster = "0.4"
wgpu = "28.0.0"
winit = { version = "0.30.12", features = ["android-native-activity"] }
