[package]
name = "pyg_engine_native"
version = "1.2.0"
edition = "2024"

[lib]
name = "pyg_engine_native"
crate-type = ["cdylib", "rlib"]
path = "rust/src/lib.rs"

[features]
default = ["python-bindings"]
python-bindings = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.27.2", optional = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json", "chrono"] }
tracing-appender = "0.2"
once_cell = "1.21"
pollster = "0.4"
wgpu = "28.0.0"
winit = { version = "0.30.12", features = ["android-native-activity"] }
priority-queue = "2.7.0"
cgmath = "0.18"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.25"
anyhow = "1.0"
crossbeam-channel = "0.5.15"
font8x8 = "0.3.1"
fontdue = "0.9.3"

[[example]]
name = "window_demo"
crate-type = ["bin"]
required-features = []
