[build-system]
requires = ["setuptools>=65.0", "setuptools-rust>=1.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyg-engine"
version = "1.2.0"
description = "A Python game engine with Rust-powered native performance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Aram Aprahamian"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [ ]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "pdoc>=14.0.0",
]
dev-tools = [ ]

[project.scripts]
pyg-engine = "pyg_engine.utilities.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
pyg_engine = ["etc/*.png"]

[tool.cibuildwheel]
# Skip 32-bit musllinux because rustup doesn't support it easily
skip = ["*-musllinux_i686"]

[tool.cibuildwheel.linux]
# Install Rust before building
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
# Add cargo to PATH for the build step
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

